--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -23,7 +23,18 @@
     <!-- Admin Login Card -->
     <div class="w-full max-w-md p-8 mt-6 bg-white shadow-lg rounded-2xl">
         <div class="flex justify-center mb-4">
-            <img src="" alt="Mambraville Logo" class="w-20 h-20">
+            <div class="p-6 flex items-center justify-center border-b border-purple-800/40">
+        <div class="text-center leading-tight select-none">
+            <h1 class="text-2xl font-extrabold tracking-tight">
+                <span class="text-blue-400">Gadgetr</span>
+                <span class="text-orange-400">y</span>
+            </h1>
+
+            <p class="text-[9px] font-semibold uppercase tracking-widest text-gray-300 mt-1">
+                powered by mambra home appliances — 2004
+            </p>
+        </div>
+    </div>
         </div>
         <h2 class="text-2xl font-semibold text-center text-[var(--primary-color)]">Admin Login</h2>
         <form class="mt-6" id="adminloginform" action="/admin/login"  method="post">
