--- a/views/admin/addproductpage.ejs
+++ b/views/admin/addproductpage.ejs
@@ -91,10 +91,10 @@
                 <!-- Price and Discount -->
                 <div class="mb-6 grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
-                        <label class="block text-gray-700 font-semibold mb-2" for="price">Price ($)</label>
+                        <label class="block text-gray-700 font-semibold mb-2" for="price">Price (₹)</label>
                         <div class="relative">
                             <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                                <span class="text-gray-500">$</span>
+                                <span class="text-gray-500">₹</span>
                             </div>
                             <input type="number" name="price" id="price"
                                 class="w-full p-3 pl-8 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600 bg-gray-50"
