--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -42,7 +42,7 @@
             <i class="fas fa-ticket-alt w-5 mr-3"></i><span>Coupons</span>
         </a>
 
-        <a href="#" class="nav-link flex items-center px-6 py-3 hover:bg-purple-800/70 rounded-lg transition">
+        <a href="/admin/offers" class="nav-link flex items-center px-6 py-3 hover:bg-purple-800/70 rounded-lg transition">
             <i class="fas fa-gift w-5 mr-3"></i><span>Offers</span>
         </a>
 
