--- a/views/user/cartpage.ejs
+++ b/views/user/cartpage.ejs
@@ -100,7 +100,7 @@
 
         <!-- CART TOTAL -->
         <div class="bg-white shadow rounded-lg p-4 mt-6">
-            <h2 class="text-xl font-semibold">Cart Total: ₹ <%= cart.cartTotal.toFixed(2) %></h2>
+            <h2 class="text-xl font-semibold">Cart Total: ₹ <%= Math.round(cart.cartTotal).toLocaleString()%></h2>
 
             <div class="mt-4">
                 <a href="/checkout"
