--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -75,7 +75,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="flex items-center text-gray-700 hover:text-indigo-600">
+                                <a href="/wallet" class="flex items-center text-gray-700 hover:text-indigo-600">
                                     <i class="fas fa-wallet mr-3 w-5 text-gray-600"></i>
                                     <span>My Wallet</span>
                                 </a>
